--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<td>74</td>
 		</tr>
 	</table>
-	<img src="obrazek.jpg" />
+	<img src="http://darkskybeskydy.com/mesic/mesic-zatmeni.jpg" />
 	<p>Integer faucibus erat a dapibus dapibus. Ut ultricies tempus lacus eget malesuada. Donec malesuada at justo sit amet cursus.
 		Sed blandit dolor ac mauris bibendum congue. Donec sit amet risus quis mi porta rutrum. Duis scelerisque diam imperdiet,
 		ultrices lacus sit amet, varius ipsum. Maecenas at ultricies purus. Orci varius natoque penatibus et magnis dis parturient
@@ -42,7 +42,7 @@
 		ligula, eget lacinia mi ultricies eget. Etiam vulputate libero id lacus cursus, at lobortis velit vulputate. Morbi finibus
 		diam vel odio egestas elementum sit amet vel justo. Sed in venenatis felis, ut consectetur quam. In pharetra nisi porttitor
 		ligula rhoncus, sit amet auctor elit accumsan. Nunc vel augue finibus, suscipit risus vitae, bibendum ante.</p>
-	<a href="https://validator.w3.org/">Validator</a>
+	<a href="https://www.google.cz">Google!</a>
 </body>
 
 </html>
